Add success example without export_directories_only = True
Signed-off-by: Patrick Steadman <ptsteadman@gmail.com>

--- a/codegen.yml
+++ b/codegen.yml
@@ -2,6 +2,6 @@ overwrite: true
 schema: "schema.graphql"
 documents: null
 generates:
-  types.d.ts:
+  bazel-out/darwin-fastbuild/bin/types.ts:
     plugins:
       - "typescript"
