--- a/codegen-template.yml
+++ b/codegen-template.yml
@@ -2,6 +2,6 @@ overwrite: true
 schema: "schema.graphql"
 documents: null
 generates:
-  bazel-out/darwin-fastbuild/bin/types.ts:
+ __OUTPATH__/types.ts:
     plugins:
       - "typescript"
